[gd_scene load_steps=86 format=3 uid="uid://cmw1f7nk56jt3"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_pyu0h"]
[ext_resource type="Texture2D" uid="uid://bpb1v1tmecbg4" path="res://assets/Red Sprite/Side ConsecutiveSlash.png" id="3_cconm"]
[ext_resource type="Texture2D" uid="uid://3ouywo2331lf" path="res://assets/Red Sprite/Side Movement.png" id="3_f5dop"]
[ext_resource type="Texture2D" uid="uid://cfhhii6ntyfq6" path="res://assets/Red Sprite/Front Movement.png" id="3_yr8wd"]
[ext_resource type="Texture2D" uid="uid://b48v7y0qwv5sd" path="res://assets/Red Sprite/Back Movement.png" id="4_fd1dc"]
[ext_resource type="Texture2D" uid="uid://ddi6i8lrujw4k" path="res://assets/Red Sprite/Back ConsecutiveSlash.png" id="5_vdqpj"]
[ext_resource type="PackedScene" uid="uid://22q253ptx5of" path="res://tscn/hitbox_component.tscn" id="9_rumc1"]
[ext_resource type="PackedScene" uid="uid://oiicbhvi6ce0" path="res://tscn/health_component.tscn" id="10_y4qyh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5xuh"]
radius = 4.0
height = 16.8

[sub_resource type="AtlasTexture" id="AtlasTexture_1q6cy"]
atlas = ExtResource("3_yr8wd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qou6"]
atlas = ExtResource("3_yr8wd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofo4m"]
atlas = ExtResource("3_yr8wd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6k11"]
atlas = ExtResource("3_yr8wd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vem0"]
atlas = ExtResource("3_yr8wd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gid0"]
atlas = ExtResource("3_yr8wd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ls11"]
atlas = ExtResource("3_yr8wd")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nukdx"]
atlas = ExtResource("3_yr8wd")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj42j"]
atlas = ExtResource("3_yr8wd")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vli5"]
atlas = ExtResource("3_yr8wd")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t5gs"]
atlas = ExtResource("3_yr8wd")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwkd5"]
atlas = ExtResource("3_yr8wd")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlhie"]
atlas = ExtResource("3_cconm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwgkw"]
atlas = ExtResource("3_cconm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vghdm"]
atlas = ExtResource("3_cconm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k188l"]
atlas = ExtResource("3_cconm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pcvg"]
atlas = ExtResource("3_cconm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6khi4"]
atlas = ExtResource("3_cconm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56lh7"]
atlas = ExtResource("3_cconm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otp71"]
atlas = ExtResource("3_cconm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c823e"]
atlas = ExtResource("3_cconm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlw8q"]
atlas = ExtResource("3_cconm")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gxi2"]
atlas = ExtResource("3_cconm")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2yf"]
atlas = ExtResource("3_cconm")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_64h4g"]
atlas = ExtResource("3_cconm")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjwne"]
atlas = ExtResource("3_cconm")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pet3y"]
atlas = ExtResource("3_cconm")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6awk"]
atlas = ExtResource("3_cconm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ivi2"]
atlas = ExtResource("3_cconm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j6sx"]
atlas = ExtResource("3_cconm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu2n3"]
atlas = ExtResource("3_cconm")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp832"]
atlas = ExtResource("3_cconm")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s38dk"]
atlas = ExtResource("3_cconm")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h7te"]
atlas = ExtResource("3_cconm")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5x0o"]
atlas = ExtResource("3_f5dop")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw3sd"]
atlas = ExtResource("3_f5dop")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3jr7"]
atlas = ExtResource("3_f5dop")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn531"]
atlas = ExtResource("3_f5dop")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhojf"]
atlas = ExtResource("3_f5dop")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuger"]
atlas = ExtResource("3_f5dop")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfcwp"]
atlas = ExtResource("3_f5dop")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p4xx"]
atlas = ExtResource("3_f5dop")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6hk6"]
atlas = ExtResource("3_f5dop")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8w58"]
atlas = ExtResource("3_f5dop")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlvft"]
atlas = ExtResource("3_f5dop")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0wbk"]
atlas = ExtResource("3_f5dop")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0xe0"]
atlas = ExtResource("5_vdqpj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_412ac"]
atlas = ExtResource("5_vdqpj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_muecy"]
atlas = ExtResource("5_vdqpj")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkk4"]
atlas = ExtResource("5_vdqpj")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqhm3"]
atlas = ExtResource("5_vdqpj")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqrtv"]
atlas = ExtResource("5_vdqpj")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35wsb"]
atlas = ExtResource("5_vdqpj")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpjof"]
atlas = ExtResource("5_vdqpj")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m0ks"]
atlas = ExtResource("5_vdqpj")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7vbn"]
atlas = ExtResource("5_vdqpj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja72"]
atlas = ExtResource("5_vdqpj")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga4ch"]
atlas = ExtResource("5_vdqpj")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbba4"]
atlas = ExtResource("5_vdqpj")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqbwy"]
atlas = ExtResource("5_vdqpj")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6jmf"]
atlas = ExtResource("5_vdqpj")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld68p"]
atlas = ExtResource("5_vdqpj")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o45jg"]
atlas = ExtResource("4_fd1dc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnj6s"]
atlas = ExtResource("4_fd1dc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i11n"]
atlas = ExtResource("4_fd1dc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xksq3"]
atlas = ExtResource("4_fd1dc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7wy"]
atlas = ExtResource("4_fd1dc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yonpi"]
atlas = ExtResource("4_fd1dc")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6urso"]
atlas = ExtResource("4_fd1dc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5342q"]
atlas = ExtResource("4_fd1dc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmjwg"]
atlas = ExtResource("4_fd1dc")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad6nq"]
atlas = ExtResource("4_fd1dc")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swmql"]
atlas = ExtResource("4_fd1dc")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmqij"]
atlas = ExtResource("4_fd1dc")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5cxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q6cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qou6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofo4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6k11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vem0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gid0")
}],
"loop": true,
"name": &"Down_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ls11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nukdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj42j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vli5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t5gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwkd5")
}],
"loop": true,
"name": &"Down_Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlhie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwgkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vghdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k188l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pcvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6khi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56lh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otp71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c823e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlw8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gxi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64h4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjwne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pet3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6awk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ivi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j6sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu2n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp832")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s38dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h7te")
}],
"loop": true,
"name": &"Side_Attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5x0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw3sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3jr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn531")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhojf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuger")
}],
"loop": true,
"name": &"Side_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfcwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p4xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6hk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8w58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlvft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0wbk")
}],
"loop": true,
"name": &"Side_Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0xe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_412ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muecy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqhm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqrtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35wsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpjof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m0ks")
}],
"loop": true,
"name": &"Up_Attack_A",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7vbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga4ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbba4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqbwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6jmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld68p")
}],
"loop": true,
"name": &"Up_Attack_B",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o45jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnj6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i11n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xksq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yonpi")
}],
"loop": true,
"name": &"Up_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6urso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5342q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmjwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad6nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swmql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmqij")
}],
"loop": true,
"name": &"Up_Move",
"speed": 5.0
}]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_4dq51"]
vertices = PackedVector2Array(-804.2, -673.6, 990, -656.6, 977.2, 607.8, -817, 595)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-804.2, -673.6, 990, -656.6, 977.2, 607.8, -817, 595)])

[node name="Player" type="CharacterBody2D"]
z_index = 1
scale = Vector2(5, 5)
motion_mode = 1
platform_floor_layers = 4294901761
script = ExtResource("1_pyu0h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_p5xuh")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s5cxe")
animation = &"Side_Idle"
autoplay = "Down_Idle"

[node name="Weapon" type="Node2D" parent="."]

[node name="Swap Timer" type="Timer" parent="Weapon"]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "parent") instance=ExtResource("9_rumc1")]
health_component = NodePath("../HealthComponent")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_p5xuh")
metadata/_edit_lock_ = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hitbox_component", "parent") instance=ExtResource("10_y4qyh")]
hitbox_component = NodePath("../HitboxComponent")
parent = NodePath("..")
MAX_HEALTH = 100.0

[node name="I-Frames" type="Timer" parent="HealthComponent"]

[node name="Sound Timer" type="Timer" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_4dq51")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="NavigationRegion2D"]

[connection signal="timeout" from="Weapon/Swap Timer" to="." method="_on_swap_timer_timeout"]
[connection signal="timeout" from="HealthComponent/I-Frames" to="." method="_on_i_frames_timeout"]
[connection signal="timeout" from="Sound Timer" to="." method="_on_sound_timer_timeout"]
[connection signal="timeout" from="NavigationRegion2D/Timer" to="." method="_on_timer_timeout"]
